Fix #85: Adjust searchbar visibility

--- a/src/Components/Container.css
+++ b/src/Components/Container.css
@@ -17,7 +17,7 @@
 }
 
 .topContainer .inputBox input {
-  width: calc(100% - 40px);
+  width: 100%;
   height: 100%;
   padding: 0px 40px;
   font-size: 16px;
@@ -40,7 +40,7 @@
   width: 40px;
   height: 45px;
   line-height: 45px;
-  font-size: 25px;
+  font-size: 20px;
   color: #8d8b97;
   text-align: center;
   border-color: #757380;
@@ -212,9 +212,7 @@
 
 .notification-item:hover {
   background-color: #121026; /* Change background color on hover */
-
 }
-
 
 @media screen and (max-width: 525px) {
   .container {
